server/network-template.yaml
AWSTemplateFormatVersion: '2010-09-09'


Resources:

    Vpc:
        Type: 'AWS::EC2::VPC'
        Properties:
            CidrBlock: '10.0.0.0/16'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}'

    PrivateSubnet:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId: !Sub '${Vpc}'
            AvailabilityZone: 'eu-west-1a'
            CidrBlock: '10.0.0.0/24'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}-private-eu-west-1a'

    PublicSubnet:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId: !Sub '${Vpc}'
            AvailabilityZone: 'eu-west-1a'
            CidrBlock: '10.0.1.0/24'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}-public-eu-west-1a'

    InternetGateway:
        Type: 'AWS::EC2::InternetGateway'
        Properties:
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}'

    VpcInternetGatewayAttachment:
        Type: 'AWS::EC2::VPCGatewayAttachment'
        Properties:
            InternetGatewayId: !Sub '${InternetGateway}'
            VpcId: !Sub '${Vpc}'

    NatPublicIpAddress:
        Type: 'AWS::EC2::EIP'
        DependsOn:
            - 'VpcInternetGatewayAttachment'
        Properties:
            Domain: 'vpc'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}'

    NatGateway:
        Type: 'AWS::EC2::NatGateway'
        Properties:
            AllocationId: !Sub '${NatPublicIpAddress.AllocationId}'
            SubnetId: !Sub '${PublicSubnet}'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}'

    PrivateRouteTable:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId: !Sub '${Vpc}'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}-private'

    PublicRouteTable:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId: !Sub '${Vpc}'
            Tags:
                -   Key: 'Name'
                    Value: !Sub '${AWS::StackName}-public'

    PrivateRouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: !Sub '${PrivateRouteTable}'
            SubnetId: !Sub '${PrivateSubnet}'

    PublicRouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: !Sub '${PublicRouteTable}'
            SubnetId: !Sub '${PublicSubnet}'

    PrivateRoute:
        Type: 'AWS::EC2::Route'
        Properties:
            RouteTableId: !Sub '${PrivateRouteTable}'
            DestinationCidrBlock: '0.0.0.0/0'
            NatGatewayId: !Sub '${NatGateway}'

    PublicRoute:
        Type: 'AWS::EC2::Route'
        Properties:
            RouteTableId: !Sub '${PublicRouteTable}'
            DestinationCidrBlock: '0.0.0.0/0'
            GatewayId: !Sub '${InternetGateway}'


Outputs:

    Vpc:
        Value: !Sub "${Vpc}"
        Export:
            Name: !Sub "${AWS::StackName}-Vpc"

    PrivateSubnet:
        Value: !Sub "${PrivateSubnet}"
        Export:
            Name: !Sub "${AWS::StackName}-PrivateSubnet"

    PublicSubnet:
        Value: !Sub "${PublicSubnet}"
        Export:
            Name: !Sub "${AWS::StackName}-PublicSubnet"
